@@ -1,3 +1,4 @@
+    ADDED: directory synchronizer beta (no right click, no icon, no compare by content)
     ADDED: file splitter
     FIXED: obsolete QT header files
     FIXED: crash at closing the progressbar window at packing
